[gd_scene load_steps=2 format=3 uid="uid://menu_screen_v1"]

[ext_resource type="Script" path="res://scripts/ui/screens/Menu.gd" id="1_menu_script"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(300, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"PopupPanel"

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleBar" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
alignment = 2

[node name="CloseBtn" type="Button" parent="Panel/VBox/TitleBar"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
text = "X"

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "System Menu"
horizontal_alignment = 1

[node name="Content" type="VBoxContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="ReplayBtn" type="Button" parent="Panel/VBox/Content"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Replay Gallery"

[node name="SettingsBtn" type="Button" parent="Panel/VBox/Content"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Settings"

[node name="QuitBtn" type="Button" parent="Panel/VBox/Content"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Quit Game"
